# rust-snappy

./: Cargo.toml  LICENSE  build.rs
benches/: bench.rs  generated-benches.rs
examples/: rsnap.rs
src/: compress.rs  decompress.rs  lib.rs  util.rs  zero_array.rs
tests/: test-compress.rs  test-decompress.rs
