[package]
name = "rsnappy"
version = "0.1.0"
description="Pure rust implementation of the snappy compression algorithm"
authors = ["Viktor Dahl <pazaconyoman@gmail.com>"]
license = "MIT"
repository = "https://github.com/veddan/rust-snappy"
build = "build.rs"

[dev-dependencies]
rand = "0.3.11"
docopt = "0.6.67"
rustc-serialize = "0.3.15"
